--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "portfolio",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.5.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "4.3.0",
-    "turbolinks": "^5.2.0"
+    "@rails/webpacker": "5.2.1",
+    "bootstrap": "^4.5.3",
+    "expose-loader": "^1.0.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
