--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "private": true,
   "dependencies": {
+    "@nathanvda/cocoon": "^1.2.14",
     "@popperjs/core": "^2.5.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
