--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery-ui": "^1.12.1",
     "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.16.1",
+    "three": "^0.121.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.0.0"
   },
